JWT, Code Analysis And UserDetails Service and JWT Filter Implemented

--- a/analyser-app-backend/main/resources/application.properties
+++ b/analyser-app-backend/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8083
+
 # Application Name
 spring.application.name=Dev Impact
 
@@ -20,4 +22,8 @@ spring.jpa.properties.hibernate.format_sql=true
 cors.allowed-origins=*
 cors.allow-credentials=false
 
+code_analyzer_service.url = http://127.0.0.1:8000
 version_control_service.url = http://localhost:8081
+email_service.url = http://localhost:8082
+application.url = http://localhost:8083
+email_sender_address = mohdzaid88798@gmail.com
