--- a/analyser-app-backend/src/main/resources/application.properties
+++ b/analyser-app-backend/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.jpa.properties.hibernate.format_sql=true
 cors.allowed-origins=*
 cors.allow-credentials=false
 
+# Swagger Configurations
+springdoc.swagger-ui.url=/api-docs.yaml
+springdoc.swagger-ui.path=/swagger-ui.html
+
 code_analyzer_service.url = http://127.0.0.1:8000
 version_control_service.url = http://localhost:8081
 email_service.url = http://localhost:8082
