--- a/version-control-data-fetcher/src/main/resources/application.properties
+++ b/version-control-data-fetcher/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # ===============================
 github.client.id=Ov23li3qzmuYR0aCQVy7
 github.client.secret=e2def6b9262454a63d6e7bc87e044282c71b41ab
-github.redirect.uri=http://localhost:8081/api/auth/callback
+github.redirect.uri=http://localhost:8081/api/v1.0.0/auth/callback
 
 # ===============================
 # Cors Configuration
