--- a/emaill-sender/email-backend/src/main/resources/application.properties
+++ b/emaill-sender/email-backend/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Swagger Configurations
+springdoc.swagger-ui.url=/api-docs.yaml
+springdoc.swagger-ui.path=/swagger-ui.html
